--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,14 @@
-#root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+/* #root {
 
   width: 100vw;
   height: 100vh;
   background-color: #ffffff;
   margin: 0;
   padding: 0;
-  }
+  } */
