--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,12 @@
   margin: 0;
   padding: 0;
   } */
+
+
+  .canvasModelPreview {
+    width: 100vw;
+    height: 100vh;
+    background-color: #ffffff;
+    margin: 0;
+    padding: 0;
+}
