--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,16 @@
 @tailwind utilities;
 
 
+@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+
 body,html {
     margin: 0;
     padding: 0;
 }
+
+
 
 /* 
 :root {
