--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Sans+Mono:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&display=swap');
 
-body,html {
-    margin: 0;
-    padding: 0;
+body,
+html {
+  margin: 0;
+  padding: 0;
 }
 
 
@@ -86,3 +88,129 @@ body,html {
     }
   }
    */
+
+
+.loadingScreen_value {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  background-color: white;
+  transition: width 0.4s;
+}
+
+
+.loading--started {
+  opacity: 0;
+  pointer-events: none;
+}
+
+
+.loadingScreen--started .loadingScreen__board {
+  opacity: 0;
+}
+
+
+.loadingScreen {
+  position: fixed;
+ 
+  z-index: 99;
+
+  transition: opacity 2s;
+}
+
+.loadingScreen__board {
+  transition: opacity 3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  height: 100vh;
+  width: 100vw;
+
+}
+
+
+/* .loading--started {
+  opacity: 0;
+  pointer-events: none;
+}
+
+
+.loadingScreen--started .loadingScreen__board {
+  opacity: 0;
+}
+.loadingScreen__board {
+  transition: opacity 8s;
+
+}
+
+.loadingScreen {
+  position: fixed;
+ 
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: inherit;
+  background-image: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 8s;
+  z-index: 99;
+
+}
+
+.loadingScreen__board {
+  padding: 64px;
+  background-color: rgb(22, 160, 75/42%);
+  border-radius: 24px;
+  background-color: rgb(254 249 195);
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+  border: dashed 6px rgb(0, 0, 0/12%);
+  transition: opacity 0.4s;
+}
+
+
+.loadingScreen__button {
+  padding: 8px 32px;
+  background-color: rgba(0, 0, 0, .42);
+  color: white;
+  border: none;
+  font-weight: bold;
+  font-size: 2.5rem;
+  border-radius: 8px;
+  transition: background-color 0.4s;
+}
+
+.loadingScreen__button:hover {
+  background-color: rgba(0, 0, 0, .42);
+  cursor: pointer;
+}
+
+.loadingScreen__button:disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
+}
+
+.loadingScreen__progress {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 12px;
+  background-color: black;
+}
+
+
+.loadingScreen__progress__value {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  background-color: rgb(0, 0, 0/50%);
+  transition: width 0.4s;
+} */
+
